For the latest news, visit the SparForte web site.

SparForte 2.1.1's focus was bringing SparForte into Jenkins continuous integration.

CHANGES SINCE 2.1
