@@ -137,6 +137,7 @@
 <LI><A HREF=rm_swap.html TARGET=main>rm_swap.sp</A></LI>
 <LI><A HREF=sleep.html TARGET=main>sleep.sp</A></LI>
 <LI><A HREF=stripcomment.html TARGET=main>stripcomment.sp</A></LI>
+<LI><A HREF=time_function.html TARGET=main>time_function.sp</A></LI>
 <LI><A HREF=tmpfile.html TARGET=main>tmpfile.sp</A></LI>
 <LI><A HREF=web_summary.html TARGET=main>web_summary.sp</A></LI>
 <LI><A HREF=whattime.html TARGET=main>whattime.sp</A></LI>
