@@ -1,0 +1,62 @@
+<HEAD><TITLE>chomp.sp</TITLE></HEAD>
+<BODY>
+<HR><DIV ALIGN="center"><H1> File : time_function.sp </H1></DIV><HR>
+<DIV ALIGN="center">
+<TABLE CELLSPACING="0" CELLPADDING="3" WIDTH="80%" SUMMARY="">
+<TR>
+<TD BGCOLOR="black"><SPAN STYLE="color: #00CC00">
+<PRE>
+$ spar time_function.sp                           
+sum(4) takes: 0.009677824 seconds.
+</PRE>
+</SPAN>
+</TD>
+</TR>
+</TABLE>
+</DIV>
+<HR>
+<PRE>
+#!/usr/local/bin/spar
+
+<b>pragma</b> annotate( summary, "time_function" )
+       @( description, "Write a program which uses a timer (with the least " )
+       @( description, "granularity available on your system) to time how " )
+       @( description, "long a function takes to execute." )
+       @( see_also, "http://rosettacode.org/wiki/Time_a_function" );
+<b>pragma</b> annotate( author, "Ken O. Burtch" );
+<b>pragma</b> license( unrestricted );
+
+<b>pragma</b> restriction( no_external_commands );
+
+<b>procedure</b> time_function <b>is</b>
+
+  <b>procedure</b> sample_function( num : <b>in</b> <b>out</b> integer ) <b>is</b>
+  <b>begin</b>
+    <b>for</b> i <b>in</b> 1..1000 <b>loop</b>
+       num := @+1;
+    <b>end</b> <b>loop</b>;
+  <b>end</b> sample_function;
+
+  start_time : calendar.time;
+  end_time   : calendar.time;
+  seconds    : duration;
+
+  <b>procedure</b> time_sample_function <b>is</b>
+    sample_param : integer := 4;
+  <b>begin</b>
+    start_time := calendar.clock;
+    sample_function( sample_param );
+    end_time := calendar.clock;
+    seconds := end_time - start_time;
+  <b>end</b> time_sample_function;
+
+<b>begin</b>
+  time_sample_function;
+  put_line( "sum(4) takes:" &amp; strings.image( seconds ) &amp; " seconds." );
+  command_line.set_exit_status( 0 );
+<b>end</b> time_function;
+
+<FONT COLOR=green><EM>-- VIM editor formatting instructions</EM></FONT>
+<FONT COLOR=green><EM>-- vim: ft=spar</EM></FONT>
+
+</PRE></BODY></HTML>
