@@ -2817,6 +2817,8 @@ pragma assert( b = true );
 current_time := 1.0 + current_time;
 b := current_time > old_current_time;
 pragma assert( b = true );
+dur := current_time - old_current_time;
+pragma assert( dur = 1.0 );
 current_time := old_current_time;
 b := current_time > current_time;
 pragma assert( b = false );
